--- a/index.html
+++ b/index.html
@@ -57,5 +57,6 @@
     </div>
   </div>
 </nav>
+<img src="http://furyu.nazo.cc/twicon/32ba__/original" class="img-circle img-responsive img-responsive-center">
 </body>
 </html>
