Google確認用ファイルの追加

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <meta name="msapplication-TileImage" content="ico/mstile-144x144.png">
 <!-- BootstrapのCSS読み込み -->
 <link rel="stylesheet" href="css/bootstrap.min.css">
-<link rel="stylesheet" href="css/bootstrap_mod.css">
+<link rel="stylesheet" href="css/bootstrap.mod.css">
 <!-- jQuery読み込み -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <!-- BootstrapのJS読み込み -->
@@ -52,7 +52,8 @@
       <!-- ナビゲーションメニュー -->
       <ul class="nav navbar-nav">
         <!-- リンク -->
-        <li class="active"><a href="#">Link</a></li>
+        <li class="active"><a href="#">TOP</a></li>
+        <li><a href="#">プロフィール</a></li>
       </ul>
     </div>
   </div>
