プロフィールのページを追加

--- a/profile.html
+++ b/profile.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>みつばのほーむぺーじ</title>
+<title>みつばのほーむぺーじ - プロフィール</title>
 <!-- favicon -->
 <link rel="shortcut icon" href="ico/favicon.ico" type="image/vnd.microsoft.icon">
 <link rel="icon" href="ico/favicon.ico" type="image/vnd.microsoft.icon">
@@ -52,8 +52,8 @@
       <!-- ナビゲーションメニュー -->
       <ul class="nav navbar-nav">
         <!-- リンク -->
-        <li class="active"><a href="/">TOP</a></li>
-        <li><a href="profile.html">プロフィール</a></li>
+        <li><a href="/">TOP</a></li>
+        <li class="active"><a href="profile.html">プロフィール</a></li>
       </ul>
     </div>
   </div>
