--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
 <meta name="msapplication-TileImage" content="ico/mstile-144x144.png">
 <!-- BootstrapのCSS読み込み -->
 <link rel="stylesheet" href="css/bootstrap.min.css">
+<!-- カスタムCSSの読み込み -->
+<link rel="stylesheet" href="css/sticky-footer.css">
 <link rel="stylesheet" href="css/bootstrap.mod.css">
 <!-- jQuery読み込み -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
@@ -58,5 +60,13 @@
     </div>
   </div>
 </nav>
+
+<footer class="footer">
+  <div class="container">
+    <p class="text-muted">Place sticky footer content here.</p>
+  </div>
+</footer>
+
+
 </body>
 </html>
