--- a/profile.html
+++ b/profile.html
@@ -65,7 +65,7 @@
 
 <footer class="footer">
   <div class="container">
-    <p class="text-muted">Place sticky footer content here.</p>
+    <p class="text-muted">Copyright© 32ba All Rights Reserved. </p>
   </div>
 </footer>
 
