プロフィールの追加

--- a/profile.html
+++ b/profile.html
@@ -61,7 +61,12 @@
   </div>
 </nav>
 
-<img src="http://furyu.nazo.cc/twicon/32ba__/original" class="img-circle img-responsive img-responsive-center">
+<img src="http://furyu.nazo.cc/twicon/32ba__/original" width="350px" height="350px" alt="icon" class="img-responsive img-responsive-center">
+<center>
+ <font size="7">みつば</font><br>
+ 32ba / mitsuba<br>
+
+</center>
 
 <footer class="footer">
   <div class="container">
