--- a/profile.html
+++ b/profile.html
@@ -47,7 +47,7 @@
         <span class="icon-bar"></span>
       </button>
       <!-- タイトル -->
-      <a class="navbar-brand" href="#">みつばのほーむぺーじ</a>
+      <a class="navbar-brand" href="index.html">みつばのほーむぺーじ</a>
     </div>
     <!-- グローバルナビ -->
     <div class="collapse navbar-collapse" id="nav-menu">
