サイト名の変更

--- a/profile.html
+++ b/profile.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>みつばのほーむぺーじ - プロフィール</title>
+<title>プロフィール - MitsuTech/title>
 <!-- favicon -->
 <link rel="shortcut icon" href="ico/favicon.ico" type="image/vnd.microsoft.icon">
 <link rel="icon" href="ico/favicon.ico" type="image/vnd.microsoft.icon">
@@ -47,7 +47,7 @@
         <span class="icon-bar"></span>
       </button>
       <!-- タイトル -->
-      <a class="navbar-brand" href="index.html">みつばのほーむぺーじ</a>
+      <a class="navbar-brand" href="index.html">MitsuTech</a>
     </div>
     <!-- グローバルナビ -->
     <div class="collapse navbar-collapse" id="nav-menu">
