--- a/profile.html
+++ b/profile.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>プロフィール - MitsuTech/title>
+<title>プロフィール - MitsuTech</title>
 <!-- favicon -->
 <link rel="shortcut icon" href="ico/favicon.ico" type="image/vnd.microsoft.icon">
 <link rel="icon" href="ico/favicon.ico" type="image/vnd.microsoft.icon">
