プロフィールの更新

--- a/profile.html
+++ b/profile.html
@@ -64,8 +64,21 @@
 <img src="http://furyu.nazo.cc/twicon/32ba__/original" width="350px" height="350px" alt="icon" class="img-responsive img-responsive-center">
 <center>
  <font size="7">みつば</font><br>
- 32ba / mitsuba<br>
-
+ 32ba / mitsuba<br><br>
+ <table>
+  <tr>
+    <td><b>誕生日</b></td>
+    <td>　5月8日</td>
+  </tr>
+  <tr>
+    <td><b>趣味</b></td>
+    <td> ゲーム,プログラミング</td>
+  </tr>
+  <tr>
+    <td><b>住んでいる所</b></td>
+    <td> 長野県</td>
+  </tr>
+ </table>
 </center>
 
 <footer class="footer">
