404ページの追加とその他追加

--- a/404.html
+++ b/404.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>プロフィール - MitsuTech</title>
+<title>TOP - MitsuTech</title>
 <!-- favicon -->
 <link rel="shortcut icon" href="ico/favicon.ico" type="image/vnd.microsoft.icon">
 <link rel="icon" href="ico/favicon.ico" type="image/vnd.microsoft.icon">
@@ -28,6 +28,7 @@
 <!-- BootstrapのCSS読み込み -->
 <link rel="stylesheet" href="css/bootstrap.min.css">
 <!-- カスタムCSSの読み込み -->
+<link rel="stylesheet" href="css/sticky-footer.css">
 <link rel="stylesheet" href="css/bootstrap.mod.css">
 <!-- jQuery読み込み -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
@@ -35,60 +36,12 @@
 <script src="js/bootstrap.min.js"></script>
 </head>
 <body>
-<nav class="navbar navbar-default" role="navigation">
-  <div class="container-fluid">
-    <!-- スマートフォン向けメニュー -->
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#nav-menu">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <!-- タイトル -->
-      <a class="navbar-brand" href="index.html">MitsuTech</a>
-    </div>
-    <!-- グローバルナビ -->
-    <div class="collapse navbar-collapse" id="nav-menu">
-      <!-- ナビゲーションメニュー -->
-      <ul class="nav navbar-nav">
-        <!-- リンク -->
-        <li><a href="/">TOP</a></li>
-        <li class="active"><a href="profile.html">プロフィール</a></li>
-      </ul>
-    </div>
-  </div>
-</nav>
-
-<img src="http://furyu.nazo.cc/twicon/32ba__/original" width="350px" height="350px" alt="icon" class="img-responsive img-responsive-center">
 <center>
- <font size="7">みつば</font><br>
- 32ba / mitsuba<br><br>
- <table>
-  <tr>
-    <td><b>誕生日</b></td>
-    <td>　5月8日</td>
-  </tr>
-  <tr>
-    <td><b>趣味</b></td>
-    <td>  ゲーム,プログラミング</td>
-  </tr>
-  <tr>
-    <td><b>住んでいる所</b></td>
-    <td>  長野県</td>
-  </tr>
- </table>
- <hr width="80%"><br>
- <font size="7">メインPC</font>
+  <div class="notfound">
+    <span>404</span>
+  </div><br>
+  <hr width="80%"><br>
+  <h1>404 Not Found.</h1>
 </center>
-
-<div id="footer">
-  <div class="copy">
-   <span>Copyright© 32ba All Rights Reserved. </span>
-  </div>
-</div>
-
-
-
 </body>
 </html>
