フッターの修正

--- a/404.html
+++ b/404.html
@@ -39,9 +39,16 @@
 <center>
   <div class="notfound">
     <span>404</span>
-  </div><br>
+  </div>
   <hr width="80%"><br>
   <h1>404 Not Found.</h1>
 </center>
+
+<div id="footer">
+  <div class="copy">
+   <span>Copyright© 32ba All Rights Reserved. </span>
+  </div>
+</div>
+
 </body>
 </html>
