--- a/index.html
+++ b/index.html
@@ -61,12 +61,11 @@
   </div>
 </nav>
 
-<footer class="footer">
-  <div class="container">
-    <p class="text-muted">Copyright© 32ba All Rights Reserved. </p>
+<div id="footer">
+  <div class="copy">
+   <span>Copyright© 32ba All Rights Reserved. </span>
   </div>
-</footer>
-
+</div>
 
 </body>
 </html>
