--- a/404.html
+++ b/404.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>TOP - MitsuTech</title>
+<title>404 Not Found.</title>
 <!-- favicon -->
 <link rel="shortcut icon" href="ico/favicon.ico" type="image/vnd.microsoft.icon">
 <link rel="icon" href="ico/favicon.ico" type="image/vnd.microsoft.icon">
@@ -28,7 +28,6 @@
 <!-- BootstrapのCSS読み込み -->
 <link rel="stylesheet" href="css/bootstrap.min.css">
 <!-- カスタムCSSの読み込み -->
-<link rel="stylesheet" href="css/sticky-footer.css">
 <link rel="stylesheet" href="css/bootstrap.mod.css">
 <!-- jQuery読み込み -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
