navbar上のTOPボタンでTOPに行けない問題の修正

--- a/profile.html
+++ b/profile.html
@@ -53,7 +53,7 @@
       <!-- ナビゲーションメニュー -->
       <ul class="nav navbar-nav">
         <!-- リンク -->
-        <li><a href="/">TOP</a></li>
+        <li><a href="index.html">TOP</a></li>
         <li class="active"><a href="profile.html">プロフィール</a></li>
       </ul>
     </div>
@@ -65,21 +65,18 @@
  <font size="7">みつば</font><br>
  32ba / mitsuba<br><br>
  <table>
+ <tbody>
   <tr>
     <td><b>誕生日</b></td>
     <td>　5月8日</td>
   </tr>
   <tr>
     <td><b>趣味</b></td>
-    <td>  ゲーム,プログラミング</td>
+    <td>　ゲーム,プログラミング</td>
   </tr>
-  <tr>
-    <td><b>住んでいる所</b></td>
-    <td>  長野県</td>
-  </tr>
+ </tbody>
  </table>
  <hr width="80%"><br>
- <font size="7">メインPC</font>
 </center>
 
 <div id="footer">
