プロフィールの追記

--- a/profile.html
+++ b/profile.html
@@ -65,18 +65,58 @@
  <font size="7">みつば</font><br>
  32ba / mitsuba<br><br>
  <table>
- <tbody>
-  <tr>
+  <tbody>
+   <tr>
     <td><b>誕生日</b></td>
     <td>　5月8日</td>
-  </tr>
-  <tr>
+   </tr>
+   <tr>
     <td><b>趣味</b></td>
     <td>　ゲーム,プログラミング</td>
+   </tr>
+   <tr>
+    <td><b>住んでいる所</b></td>
+    <td>　長野県</td>
+   </tr>
+  </tbody>
+ </table>
+ <hr width="80%"><br>
+ <font size="7">メインPC</font><br>
+ Mouse Computer LuvBook LB-F315S<br><br>
+ <table>
+  <tbody>
+   <tr>
+    <td><b>OS</b></td>
+    <td>　Windows10 Home (64bit)</td>
+   </tr>
+   <tr>
+    <td><b>CPU</b></td>
+    <td>　Intel(R) Core(TM) i5-3230M CPU @ 2.60GHz</td>
+   </tr>
+   <tr>
+    <td><b>メモリー</b></td>
+    <td>　8GB DDR3</td>
+   </tr>
+   <tr>
+    <td><b>HDD</b></td>
+    <td>　500GB</td>
+   </tr>
+   <tr>
+    <td><b>液晶サイズ</b></td>
+    <td>　15.6型ワイド (1366×768)</td>
+   </tr>
+  </tbody>
+ </table>
+ <hr width="80%"><br>
+ <font size="7">その他（タブレット等）</font><br><br>
+ <table>
+ <tbody>
+  <tr>
+    <td><b>タブレット</b></td>
+    <td>　ASUS ZenPad8.0 Z380KL</td>
   </tr>
  </tbody>
  </table>
- <hr width="80%"><br>
 </center>
 
 <div id="footer">
@@ -86,6 +126,12 @@
 </div>
 
 
+<!--
+  <tr>
+    <td><b></b></td>
+    <td>　</td>
+  </tr>
+-->
 
 </body>
 </html>
