コピーライトがセンターに表示されるように変更

--- a/profile.html
+++ b/profile.html
@@ -120,9 +120,11 @@
 </center>
 
 <div id="footer">
+ <center>
   <div class="copy">
    <span>Copyright© 32ba All Rights Reserved. </span>
   </div>
+ </center>
 </div>
 
 
