--- a/404.html
+++ b/404.html
@@ -74,9 +74,11 @@
 </center>
 
 <div id="footer">
+<center>
   <div class="copy">
    <span>Copyright© 32ba All Rights Reserved. </span>
   </div>
+</center>
 </div>
 
 </body>
