--- a/index.html
+++ b/index.html
@@ -61,9 +61,11 @@
 </nav>
 
 <div id="footer">
+ <center>
   <div class="copy">
    <span>Copyright© 32ba All Rights Reserved. </span>
   </div>
+ </center>
 </div>
 
 </body>
