Creditページの追加

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 <div id="footer">
  <center>
   <div class="copy">
-   <span>Copyright© 32ba All Rights Reserved. </span>
+   <span>Copyright© 32ba All Rights Reserved. - <a href="credit.html">credit</a></span>
   </div>
  </center>
 </div>
