--- a/credit.html
+++ b/credit.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>プロフィール - MitsuTech</title>
+<title>Credit - MitsuTech</title>
 <!-- favicon -->
 <link rel="shortcut icon" href="ico/favicon.ico" type="image/vnd.microsoft.icon">
 <link rel="icon" href="ico/favicon.ico" type="image/vnd.microsoft.icon">
@@ -53,70 +53,22 @@
       <!-- ナビゲーションメニュー -->
       <ul class="nav navbar-nav">
         <!-- リンク -->
-        <li><a href="index.html">TOP</a></li>
-        <li class="active"><a href="profile.html">プロフィール</a></li>
+        <li class="active"><a href="/">TOP</a></li>
+        <li><a href="profile.html">プロフィール</a></li>
       </ul>
     </div>
   </div>
 </nav>
 
-<img src="http://furyu.nazo.cc/twicon/32ba__/original" width="350px" height="350px" alt="icon" class="img-responsive img-responsive-center">
 <center>
- <font size="7">みつば</font><br>
- 32ba / mitsuba<br><br>
- <table>
-  <tbody>
-   <tr>
-    <td><b>誕生日</b></td>
-    <td>　5月8日</td>
-   </tr>
-   <tr>
-    <td><b>趣味</b></td>
-    <td>　ゲーム,プログラミング</td>
-   </tr>
-   <tr>
-    <td><b>住んでいる所</b></td>
-    <td>　長野県</td>
-   </tr>
-  </tbody>
- </table>
- <hr width="80%"><br>
- <font size="7">メインPC</font><br>
- Mouse Computer LuvBook LB-F315S<br><br>
- <table>
-  <tbody>
-   <tr>
-    <td><b>OS</b></td>
-    <td>　Windows10 Home (64bit)</td>
-   </tr>
-   <tr>
-    <td><b>CPU</b></td>
-    <td>　Intel(R) Core(TM) i5-3230M CPU @ 2.60GHz</td>
-   </tr>
-   <tr>
-    <td><b>メモリー</b></td>
-    <td>　8GB DDR3</td>
-   </tr>
-   <tr>
-    <td><b>HDD</b></td>
-    <td>　500GB</td>
-   </tr>
-   <tr>
-    <td><b>液晶サイズ</b></td>
-    <td>　15.6型ワイド (1366×768)</td>
-   </tr>
-  </tbody>
- </table>
- <hr width="80%"><br>
- <font size="7">その他（タブレット等）</font><br><br>
- <table>
- <tbody>
-  <tr>
-    <td><b>タブレット</b></td>
-    <td>　ASUS ZenPad8.0 Z380KL</td>
-  </tr>
- </tbody>
- </table>
+  <table>
+    <tbody>
+      <tr>
+        <td><b></b></td>
+        <td></td>
+      </tr>
+    </tbody>
+  </table>
 </center>
 
 <div id="footer">
@@ -126,14 +78,6 @@
   </div>
  </center>
 </div>
-
-
-<!--
-  <tr>
-    <td><b></b></td>
-    <td>　</td>
-  </tr>
--->
 
 </body>
 </html>
