サイト名の変更

--- a/404.html
+++ b/404.html
@@ -46,7 +46,7 @@
         <span class="icon-bar"></span>
       </button>
       <!-- タイトル -->
-      <a class="navbar-brand" href="index.html">MitsuTech</a>
+      <a class="navbar-brand" href="index.html">32ba.net</a>
     </div>
     <!-- グローバルナビ -->
     <div class="collapse navbar-collapse" id="nav-menu">
