プロフィールアイコンの取得先変更

--- a/profile.html
+++ b/profile.html
@@ -60,7 +60,7 @@
   </div>
 </nav>
 
-<img src="http://furyu.nazo.cc/twicon/32ba__/original" width="350px" height="350px" alt="icon" class="img-responsive img-responsive-center">
+<img src="img/profile.png" width="350px" height="350px" alt="icon" class="img-responsive img-responsive-center">
 <center>
  <font size="7">みつば</font><br>
  32ba / mitsuba<br><br>
