--- a/profile.html
+++ b/profile.html
@@ -35,7 +35,7 @@
 <script src="js/bootstrap.min.js"></script>
 </head>
 <body>
-<nav class="navbar navbar-default" role="navigation">
+<nav class="navbar navbar-inverse" role="navigation">
   <div class="container-fluid">
     <!-- スマートフォン向けメニュー -->
     <div class="navbar-header">
