Navbar内のボタンがおかしかったのを修正

--- a/404.html
+++ b/404.html
@@ -54,7 +54,7 @@
       <ul class="nav navbar-nav">
         <!-- リンク -->
         <li><a href="index.html">TOP</a></li>
-        <li class="active"><a href="profile.html">プロフィール</a></li>
+        <li><a href="profile.html">プロフィール</a></li>
       </ul>
     </div>
   </div>
