--- a/credit.html
+++ b/credit.html
@@ -53,7 +53,7 @@
       <!-- ナビゲーションメニュー -->
       <ul class="nav navbar-nav">
         <!-- リンク -->
-        <li class="active"><a href="/">TOP</a></li>
+        <li><a href="/">TOP</a></li>
         <li><a href="profile.html">プロフィール</a></li>
 
       </ul>
