--- a/credit.html
+++ b/credit.html
@@ -65,7 +65,13 @@
  <font size="7">Credit</font><br><br>
  <hr width="80%"><br>
  
-</center>
+<div class="container">
+    <!-- Example row of columns -->
+    <div class="row">
+      <div class="col-md-4">
+      </div>
+    </div>
+</div>
 
 <div id="footer">
  <center>
