--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
   </div>
 </nav>
 
-<div class="jumbotron">
+<div class="jumbotron" style="background: url('img/banner.png');background-position: center;background-position: center 60%;">
     <div class="container">
-      <h1>Hello, world!</h1>
+      <h6>Hello, world!</h6>
       <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
       <p><a class="btn btn-primary btn-lg" role="button" href="#">Learn more »</a></p>
     </div>
