--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
 
 <div class="jumbotron" style="background: url('img/banner.png');background-position: center;background-position: center 60%;">
     <div class="container">
-      <h1>Hello, world!</h1>
-      <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
+      <h1>Hello , World</h1>
+      <p>ようこそ,32ba.netへ!<br></p>
       <p><a class="btn btn-primary btn-lg" role="button" href="#">Learn more »</a></p>
     </div>
 </div>
@@ -73,7 +73,7 @@
       <div class="col-md-4">
         <h2>Who's "みつば"？</h2>
         <p>みつばです。</p>
-        <p><a class="btn btn-default" role="button" href="profile.html">もっと詳しく »</a></p>
+        <p><a class="btn btn-default" role="button" href="profile.html">詳しいプロフィール »</a></p>
       </div>
       <div class="col-md-4">
         <h2>Heading</h2>
