リンク集ページの追加

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
         <!-- リンク -->
         <li class="active"><a href="/">TOP</a></li>
         <li><a href="profile.html">プロフィール</a></li>
+        <li><a href="links.html">リンク集</a></li>
       </ul>
     </div>
   </div>
@@ -62,8 +63,8 @@
 
 <div class="jumbotron" style="background: url('img/banner.png');background-position: center;background-position: center 60%;">
     <div class="container">
-      <h1>Hello , World</h1>
-      <p>ようこそ,32ba.netへ!<br></p>
+      <h1>ようこそ,32ba.netへ!</h1>
+      <p>Hello , World!<br></p>
     </div>
 </div>
 <div class="container">
