--- a/links.html
+++ b/links.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Credit - 32ba.net</title>
+<title>リンク集 - 32ba.net</title>
 <!-- favicon -->
 <link rel="shortcut icon" href="ico/favicon.ico" type="image/vnd.microsoft.icon">
 <link rel="icon" href="ico/favicon.ico" type="image/vnd.microsoft.icon">
@@ -55,23 +55,11 @@
         <!-- リンク -->
         <li><a href="/">TOP</a></li>
         <li><a href="profile.html">プロフィール</a></li>
-        <li><a href="links.html">リンク集</a></li>
+        <li class="active"><a href="links.html">リンク集</a></li>
       </ul>
     </div>
   </div>
 </nav>
-
-<center>
- <font size="7">Credit</font><br><br>
- <hr width="80%"><br>
- 
-<div class="container">
-    <!-- Example row of columns -->
-    <div class="row">
-      <div class="col-md-4">
-      </div>
-    </div>
-</div>
 
 <div id="footer">
  <center>
