--- a/profile.html
+++ b/profile.html
@@ -55,6 +55,7 @@
         <!-- リンク -->
         <li><a href="index.html">TOP</a></li>
         <li class="active"><a href="profile.html">プロフィール</a></li>
+        <li><a href="links.html">リンク集</a></li>
       </ul>
     </div>
   </div>
