--- a/index.html
+++ b/index.html
@@ -68,25 +68,37 @@
     </div>
 </div>
 <div class="container">
-    <!-- Example row of columns -->
     <div class="row">
-      <div class="col-md-4">
+    <!--Introduce-->
+      <div class="col-md-3">
         <h2>Who's "みつば"？</h2>
         <p>みつばです。</p>
         <p><a class="btn btn-default" role="button" href="profile.html">詳しいプロフィール »</a></p>
       </div>
-      <div class="col-md-4">
+      <div class="col-md-3">
         <h2>Heading</h2>
         <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
         <p><a class="btn btn-default" role="button" href="#">View details »</a></p>
      </div>
-      <div class="col-md-4">
+      <div class="col-md-3">
         <h2>Heading</h2>
         <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
         <p><a class="btn btn-default" role="button" href="#">View details »</a></p>
       </div>
+      <!--twitter-->
+      <div class="col-sm-3">
+        <h2>ﾂｲｯﾀｧ<small>Twitter</small></h2>
+                    <a class="twitter-timeline"  href="https://twitter.com/32ba__" data-widget-id="695213405821505537">@32ba__さんのツイート</a>
+            <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+          
+      </div>
+      
+
+
     </div>
 </div>
+
+
 
 <div id="footer">
  <center>
