リンク集への誘導を追加

--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
         <p><a class="btn btn-default" role="button" href="profile.html">詳しいプロフィール »</a></p>
       </div>
       <div class="col-md-3">
-        <h2>Heading</h2>
-        <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-        <p><a class="btn btn-default" role="button" href="#">View details »</a></p>
+        <h2>リンク集</h2>
+        <p>みつばがよく使うサービス一覧です。</br></p>
+        <p><a class="btn btn-default" role="button" href="links.html">リンク集 »</a></p>
      </div>
       <div class="col-md-3">
         <h2>Heading</h2>
