--- a/404.html
+++ b/404.html
@@ -56,6 +56,7 @@
         <li><a href="index.html">TOP</a></li>
         <li><a href="profile.html">プロフィール</a></li>
         <li><a href="links.html">リンク集</a></li>
+        <li><a href="product.html">製作物</a></li>
       </ul>
     </div>
   </div>
