--- a/credit.html
+++ b/credit.html
@@ -56,6 +56,7 @@
         <li><a href="/">TOP</a></li>
         <li><a href="profile.html">プロフィール</a></li>
         <li><a href="links.html">リンク集</a></li>
+        <li><a href="product.html">製作物</a></li>
       </ul>
     </div>
   </div>
