TOPにお知らせを追加

--- a/profile.html
+++ b/profile.html
@@ -64,6 +64,7 @@
 
 <img src="img/profile.png" width="350px" height="350px" alt="icon" class="img-responsive img-responsive-center">
 <center>
+<!--Self Introduce-->
  <font size="7">みつば</font><br>
  32ba / mitsuba<br><br>
  <table>
@@ -83,6 +84,7 @@
   </tbody>
  </table>
  <hr width="80%"><br>
+ <!--Main PC Spec-->
  <font size="7">メインPC</font><br>
  Mouse Computer LuvBook LB-F315S<br><br>
  <table>
@@ -110,6 +112,7 @@
   </tbody>
  </table>
  <hr width="80%"><br>
+ <!--Other Hardware-->
  <font size="7">その他（タブレット等）</font><br><br>
  <table>
  <tbody>
