--- a/index.html
+++ b/index.html
@@ -79,22 +79,52 @@
             <p><a class="btn btn-default" role="button" href="profile.html">詳しいプロフィール »</a></p>
           </div>
           <div class="col-sm-3">
-            <h2>リンク集</h2>
-            <p>みつばがよく使うサービス一覧です。</br></p>
+            <h2>リンク集<small>Links</small></h2>
+            <p>みつばがよく使うサービス一覧です。</br>Ask.fmとか、Twitterとかも入っています。</p>
             <p><a class="btn btn-default" role="button" href="links.html">リンク集 »</a></p>
           </div>
           <div class="col-sm-3">
-            <h2>製作物</h2>
+            <h2>製作物<small>Products</small></h2>
             <p>みつばの製作物の一覧です。</br></p>
             <p><a class="btn btn-default" role="button" href="product.html">製作物 »</a></p>
           </div>
-          <div class="col-md-9">
-            
-          </div>
+          <!--News-->
+          <div class="col-sm-9">
+            <hr width="100%">
+            <h2>お知らせ<small>News</small></h2>
+            <table class="table">
+
+              <thead>
+                <tr>
+                  <th>日付</th>
+                  <th>内容</th>
+                </tr>
+              </thead>
+              <!--Main-->
+              <tbody>
+                <tr>
+                  <th>----/--/--</th>
+                  <th>---</th>
+                </tr>
+                <tr>
+                  <th>----/--/--</th>
+                  <th>---</th>
+                </tr>
+                <tr>
+                  <th>----/--/--</th>
+                  <th>---</th>
+                </tr>
+                <tr>
+                  <th>----/--/--</th>
+                  <th>---</th>
+                </tr>
+              </tbody>
+            </table>
+            </div>
         </div>
       </div>
       <!--twitter-->
-      <div class="col-md-3">
+      <div class="col-sm-3">
         <h2>ﾂｲｯﾀｧ<small>Twitter</small></h2>
             <a class="twitter-timeline"  href="https://twitter.com/32ba__" data-widget-id="695213405821505537">@32ba__さんのツイート</a>
             <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
