--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
           <!--News-->
           <div class="col-sm-9">
             <hr width="100%">
-            <h2>お知らせ<small>News</small></h2>
+            <h2>お知らせ<small>Infomation</small></h2>
             <table class="table">
 
               <thead>
