広告表示の修正

--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
             <p>みつばの製作物の一覧です。</br></p>
             <p><a class="btn btn-default" role="button" href="product.html">製作物 »</a></p>
           </div>
-          <div class="col-xs-2">
-            <div class="visible-xs">
+          <div class="col-xs-2 col-sm-3">
+            <div class="visible-xs visible-ms">
               <!-- admax -->
               <script src="http://adm.shinobi.jp/s/786758b8c9801cb8b235f9cfd3ab8c0f"></script>
               <!-- admax -->
