広告の設置

--- a/index.html
+++ b/index.html
@@ -88,7 +88,13 @@
             <p>みつばの製作物の一覧です。</br></p>
             <p><a class="btn btn-default" role="button" href="product.html">製作物 »</a></p>
           </div>
-          
+          <div class="col-sm-7">
+            <div class="hidden-xs">
+              <!-- admax -->
+              <script src="https://adm.shinobi.jp/s/a9937a13ebc77e310f5a1ac1f10319d7"></script>
+              <!-- admax -->
+            </div>
+          </div>
           <!--News-->
           <div class="col-sm-9">
             <hr width="100%">
@@ -123,6 +129,11 @@
             </table>
             </div>
         </div>
+      <div class="visible-xs">
+        <!-- admax -->
+        <script src="https://adm.shinobi.jp/s/dfe63e7149aa66fbe741137c222c3623"></script>
+        <!-- admax -->
+      </div>
       </div>
       <!--twitter-->
       <div class="col-sm-3">
