--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
           <div class="col-sm-7">
             <div class="hidden-xs">
               <!-- admax -->
-              <script src="https://adm.shinobi.jp/s/a9937a13ebc77e310f5a1ac1f10319d7"></script>
+              <script src="http://adm.shinobi.jp/s/a9937a13ebc77e310f5a1ac1f10319d7"></script>
               <!-- admax -->
             </div>
           </div>
