広告の差し替え
Adsenseに変更しました。

Signed-off-by: mitsubasan <mitsubadotto@outlook.jp>

--- a/index.html
+++ b/index.html
@@ -89,9 +89,17 @@
             <p><a class="btn btn-default" role="button" href="product.html">製作物 »</a></p>
           </div>
           <div class="col-sm-7">
-              <!-- admax -->
-              <script src="https://adm.shinobi.jp/s/a9937a13ebc77e310f5a1ac1f10319d7"></script>
-              <!-- admax -->
+            <div class="hidden-xs">
+              <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+              <!-- 32ba.net(728*90) -->
+              <ins class="adsbygoogle"
+                   style="display:inline-block;width:728px;height:90px"
+                   data-ad-client="ca-pub-3489945433339224"
+                   data-ad-slot="7471167599"></ins>
+              <script>
+              (adsbygoogle = window.adsbygoogle || []).push({});
+              </script>
+            </div>
           </div>
           <!--News-->
           <div class="col-sm-9">
@@ -127,9 +135,16 @@
             </table>
             </div>
         </div>
-        <!-- admax -->
-        <script src="https://adm.shinobi.jp/s/dfe63e7149aa66fbe741137c222c3623"></script>
-        <!-- admax -->
+        <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+        <!-- 32ba.net(レスポンシブ) -->
+        <ins class="adsbygoogle"
+             style="display:block"
+             data-ad-client="ca-pub-3489945433339224"
+             data-ad-slot="6692438395"
+             data-ad-format="auto"></ins>
+        <script>
+        (adsbygoogle = window.adsbygoogle || []).push({});
+        </script>
       </div>
       <!--twitter-->
       <div class="col-sm-2">
