リンク集に欲しい物リストへのリンクを追加

--- a/links.html
+++ b/links.html
@@ -62,6 +62,25 @@
   </div>
 </nav>
 
+<div class="jumbotron" style="background: url('img/banner.png');background-position: center;background-position: center 60%;">
+    <div class="container">
+      <h1>リンク集</h1>
+      <p>私の使うサービス一覧です。<br></p>
+    </div>
+</div>
+
+<div class="container">
+  <div class="row">
+    <div class="col-sm-3">
+      <p><img src="img/amazon.png" width="80px" height="80px" alt="icon" style="float:left;" class="img-responsive-center　img-rounded"><h3>Amazon</h3></p>
+      <hr width="100%">
+      <h2>欲しい物リスト</h2>
+      <p>みつばの欲しい物リストです。<br>恵んで下さい。</p>
+      <p><a class="btn btn-default" role="button" href="http://www.amazon.co.jp/registry/wishlist/21XZHR6PIKP33/ref=cm_sw_r_tw_ws_k3ZUwbAY49SXG ">欲しい物リスト »</a></p>
+    </div>
+  </div>
+</div>
+
 <div id="footer">
  <center>
   <div class="copy">
