--- a/links.html
+++ b/links.html
@@ -70,21 +70,25 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-3">
-          <p><img src="img/amazon.png" width="80px" height="80px" alt="icon" style="float:left;" class="img-responsive-center　img-rounded"><h3>Amazon</h3></p>
+          <p><img class="circle" width="80px" height="80px" src="img/amazon.png"><h3>Amazon</h3></p>
           <hr width="100%">
           <h2>欲しい物リスト</h2>
           <p>みつばの欲しい物リストです。<br>恵んで下さい。</p>
           <p><a class="btn btn-default" role="button" href="http://www.amazon.co.jp/registry/wishlist/21XZHR6PIKP33/ref=cm_sw_r_tw_ws_k3ZUwbAY49SXG ">欲しい物リスト »</a></p>
         </div>
         <div class="col-sm-3">
-          <p><img src="img/twitter.png" width="80px" height="80px" alt="icon" style="float:left;" class="img-responsive-center　img-rounded"><h3>Twitter</h3></p>
+          <p><img class="circle" width="80px" height="80px" src="img/twitter.png"><h3>Twitter</h3></p>
           <hr width="100%">
           <h2>@32ba__</h2>
           <p>みつばのTwitterです。<br>良かったらフォローしてね</p>
           <p><a class="btn btn-default" role="button" href="https://twitter.com/32ba__">@32ba__ »</a></p>
         </div>
         <div class="col-sm-3">
-          
+          <p><img class="circle" width="70px" height="70px" src="img/ask.png"><h3>Ask.fm</h3></p>
+          <hr width="100%">
+          <h2>Ask.fm</h2>
+          <p>何でも質問して下さい</p>
+          <p><a class="btn btn-default" role="button" href="https://ask.fm/mitsuba0224">@mitsuba0224 »</a></p>
         </div>
       </div>
     </div>
