--- a/index.html
+++ b/index.html
@@ -87,9 +87,18 @@
               <p>みつばの製作物の一覧です。</br></p>
               <p><a class="btn btn-default" role="button" href="product.html">製作物 »</a></p>
             </div>
-            <div class="col-sm-7">
-              <div class="hidden-xs">
-              </div>
+            <div class="col-sm-9">
+              <h4>スポンサードリンク</h4><br>
+              <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+              <!-- 32ba.ner top -->
+              <ins class="adsbygoogle"
+              style="display:block"
+              data-ad-client="ca-pub-3489945433339224"
+              data-ad-slot="6847641599"
+              data-ad-format="auto"></ins>
+              <script>
+              (adsbygoogle = window.adsbygoogle || []).push({});
+              </script>
             </div>
             <!--News-->
             <div class="col-sm-9">
@@ -123,20 +132,23 @@
                 </tbody>
               </table>
             </div>
-            <!--twitter-->
-            <div class="col-sm-2">
-              <h2>ﾂｲｯﾀｧ<small>Twitter</small></h2>
-              <a class="twitter-timeline"  href="https://twitter.com/32ba__" data-widget-id="695213405821505537">@32ba__さんのツイート</a>
-              <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
-            </div>
           </div>
         </div>
-        <div id="footer">
-          <center>
-          <div class="copy">
-            <span>Copyright© 32ba All Rights Reserved. - <a href="credit.html">credit</a></span>
-          </div>
-          </center>
+        <!--twitter-->
+        <div class="col-sm-2">
+          <h2>ﾂｲｯﾀｧ<small>Twitter</small></h2>
+          <a class="twitter-timeline"  href="https://twitter.com/32ba__" data-widget-id="695213405821505537">@32ba__さんのツイート</a>
+          <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+          
         </div>
-      </body>
-    </html>
+      </div>
+    </div>
+    <div id="footer">
+      <center>
+      <div class="copy">
+        <span>Copyright© 32ba All Rights Reserved. - <a href="credit.html">credit</a></span>
+      </div>
+      </center>
+    </div>
+  </body>
+</html>
