--- a/links.html
+++ b/links.html
@@ -70,28 +70,28 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-3">
-          <p><img class="circle" src="img/twitter.png"><h3>Twitter</h3></p>
+          <p><img class="circle" width="60px" height="60px" src="img/twitter.png"><h3>Twitter</h3></p>
           <hr width="100%">
           <h2>@32ba__</h2>
           <p>みつばのTwitterです。<br>良かったらフォローしてね</p>
           <p><a class="btn btn-default" role="button" href="https://twitter.com/32ba__">@32ba__ »</a></p>
         </div>
         <div class="col-sm-3">
-          <p><img class="circle" src="img/ask.png"><h3>Ask.fm</h3></p>
+          <p><img class="circle" width="60px" height="60px" src="img/ask.png"><h3>Ask.fm</h3></p>
           <hr width="100%">
           <h2>Ask.fm</h2>
           <p>何でも質問して下さい</p>
           <p><a class="btn btn-default" role="button" href="https://ask.fm/mitsuba0224">@mitsuba0224 »</a></p>
         </div>
         <div class="col-sm-3">
-          <p><img class="circle" src="img/blog.png"><h3>ブログ</h3></p>
+          <p><img class="circle" width="60px" height="60px" src="img/blog.png"><h3>ブログ</h3></p>
           <hr width="100%">
           <h2>みつばのぶろぐ</h2>
           <p>自由気ままな私のブログです.</p>
           <p><a class="btn btn-default" role="button" href="https://blog.32ba.net">みつばのぶろぐ »</a></p>
         </div>
         <div class="col-sm-3">
-          <p><img class="circle" src="img/amazon.png"><h3>Amazon</h3></p>
+          <p><img class="circle" width="60px" height="60px" src="img/amazon.png"><h3>Amazon</h3></p>
           <hr width="100%">
           <h2>欲しい物リスト</h2>
           <p>みつばの欲しい物リストです。<br>恵んで下さい。</p>
