--- a/links.html
+++ b/links.html
@@ -97,7 +97,7 @@
           <p>みつばの欲しい物リストです。<br>恵んで下さい。</p>
           <p><a class="btn btn-default" role="button" href="http://www.amazon.co.jp/registry/wishlist/21XZHR6PIKP33/ref=cm_sw_r_tw_ws_k3ZUwbAY49SXG ">欲しい物リスト »</a></p>
         </div>
-        <div class="col-sm-12">
+        <div class="col-sm-6">
           <h2>スポンサードリンク</h2>
           <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
           <!-- 32ba.net Link(1) -->
@@ -109,6 +109,12 @@
           <script>
           (adsbygoogle = window.adsbygoogle || []).push({});
           </script>
+        </div>
+        <div class="col-sm-3">
+          <p><img class="circle" width="60px" height="60px" src="img/github.png"><h3>Github</h3></p>
+          <hr width="100%">
+          <p>私のGithubです.<br>ちなみにこのページのソースもGithubで管理しています.</p>
+          <p><a class="btn btn-default" role="button" href="https://github.com/32ba">Github »</a></p>
         </div>
       </div>
     </div>
