相互リンクのためのページを追加.

--- a/index.html
+++ b/index.html
@@ -67,88 +67,59 @@
         <p>Hello , World!<br></p>
       </div>
     </div>
-    <div class="container">
+    <div class="container-fluid">
       <div class="row">
         <div class="col-md-9">
           <div class="row">
             <!--Introduce-->
-            <div class="col-sm-3">
+            <div class="col-md-3">
               <h2>Who's "みつば"？</h2>
               <p>みつばです。</p>
               <p><a class="btn btn-default" role="button" href="profile.html">詳しいプロフィール »</a></p>
             </div>
-            <div class="col-sm-3">
+            <div class="col-md-3">
               <h2>リンク集<small>Links</small></h2>
               <p>みつばがよく使うサービス一覧です。</br>Ask.fmとか、Twitterとかも入っています。</p>
               <p><a class="btn btn-default" role="button" href="links.html">リンク集 »</a></p>
             </div>
-            <div class="col-sm-3">
+            <div class="col-md-3">
               <h2>製作物<small>Products</small></h2>
               <p>みつばの製作物の一覧です。</br></p>
               <p><a class="btn btn-default" role="button" href="product.html">製作物 »</a></p>
             </div>
-            <div class="col-sm-8">
+            <div class="col-md-3">
+              <h2>相互リンク<small>ReciprocalLink</small></h2>
+            </div>
+            <div class="col-sm-12">
               <h4>スポンサードリンク</h4><br>
               <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
               <!-- 32ba.ner top -->
               <ins class="adsbygoogle"
-                style="display:block"
-                data-ad-client="ca-pub-3489945433339224"
-                data-ad-slot="6847641599"
-                data-ad-format="auto"></ins>
+              style="display:block"
+              data-ad-client="ca-pub-3489945433339224"
+              data-ad-slot="6847641599"
+              data-ad-format="auto"></ins>
               <script>
               (adsbygoogle = window.adsbygoogle || []).push({});
               </script>
             </div>
-            <!--News-->
-            <div class="col-sm-9">
-              <hr width="100%">
-              <h2>お知らせ<small>Infomation</small></h2>
-              <table class="table">
-                <thead>
-                  <tr>
-                    <th>日付</th>
-                    <th>内容</th>
-                  </tr>
-                </thead>
-                <!--Main-->
-                <tbody>
-                  <tr>
-                    <th>----/--/--</th>
-                    <th>---</th>
-                  </tr>
-                  <tr>
-                    <th>----/--/--</th>
-                    <th>---</th>
-                  </tr>
-                  <tr>
-                    <th>----/--/--</th>
-                    <th>---</th>
-                  </tr>
-                  <tr>
-                    <th>----/--/--</th>
-                    <th>---</th>
-                  </tr>
-                </tbody>
-              </table>
-            </div>
           </div>
         </div>
         <!--twitter-->
-        <div class="col-sm-2">
+        <div class="col-sm-3">
           <h2>ﾂｲｯﾀｧ<small>Twitter</small></h2>
           <a class="twitter-timeline"  href="https://twitter.com/32ba__" data-widget-id="695213405821505537">@32ba__さんのツイート</a>
           <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
-          
         </div>
       </div>
     </div>
-    <div id="footer">
-      <center>
-      <div class="copy">
-        <span>Copyright© 32ba All Rights Reserved. - <a href="credit.html">credit</a></span>
-      </div>
-      </center>
+  </div>
+  <div id="footer">
+    <center>
+    <div class="copy">
+      <span>Copyright© 32ba All Rights Reserved. - <a href="credit.html">credit</a></span>
     </div>
-  </body>
+    </center>
+  </div>
+</body>
 </html>
