--- a/reciprocallink.html
+++ b/reciprocallink.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>リンク集 - 32ba.net</title>
+    <title>相互リンク集 - 32ba.net</title>
     <!-- favicon -->
     <link rel="shortcut icon" href="ico/favicon.ico" type="image/vnd.microsoft.icon">
     <link rel="icon" href="ico/favicon.ico" type="image/vnd.microsoft.icon">
@@ -55,7 +55,7 @@
             <!-- リンク -->
             <li><a href="/">TOP</a></li>
             <li><a href="profile.html">プロフィール</a></li>
-            <li class="active"><a href="links.html">リンク集</a></li>
+            <li><a href="links.html">リンク集</a></li>
             <li><a href="product.html">製作物</a></li>
           </ul>
         </div>
@@ -63,61 +63,11 @@
     </nav>
     <div class="jumbotron" style="background: url('img/banner.png');background-position: center;background-position: center 60%;">
       <div class="container">
-        <h1>リンク集</h1>
-        <p>私の使うサービス一覧です。<br></p>
+        <h1>相互リンク集</h1>
+        <p>私のサイトと相互リンクになっているページを紹介します．<br></p>
       </div>
     </div>
-    <div class="container">
-      <div class="row">
-        <div class="col-sm-3">
-          <p><img class="circle" width="60px" height="60px" src="img/twitter.png"><h3>Twitter</h3></p>
-          <hr width="100%">
-          <h2>@32ba__</h2>
-          <p>みつばのTwitterです。<br>良かったらフォローしてね</p>
-          <p><a class="btn btn-default" role="button" href="https://twitter.com/32ba__">@32ba__ »</a></p>
-        </div>
-        <div class="col-sm-3">
-          <p><img class="circle" width="60px" height="60px" src="img/ask.png"><h3>Ask.fm</h3></p>
-          <hr width="100%">
-          <h2>Ask.fm</h2>
-          <p>何でも質問して下さい</p>
-          <p><a class="btn btn-default" role="button" href="https://ask.fm/mitsuba0224">@mitsuba0224 »</a></p>
-        </div>
-        <div class="col-sm-3">
-          <p><img class="circle" width="60px" height="60px" src="img/blog.png"><h3>ブログ</h3></p>
-          <hr width="100%">
-          <h2>みつばのぶろぐ</h2>
-          <p>自由気ままな私のブログです.</p>
-          <p><a class="btn btn-default" role="button" href="https://blog.32ba.net">みつばのぶろぐ »</a></p>
-        </div>
-        <div class="col-sm-3">
-          <p><img class="circle" width="60px" height="60px" src="img/amazon.png"><h3>Amazon</h3></p>
-          <hr width="100%">
-          <h2>欲しい物リスト</h2>
-          <p>みつばの欲しい物リストです。<br>恵んで下さい。</p>
-          <p><a class="btn btn-default" role="button" href="http://www.amazon.co.jp/registry/wishlist/21XZHR6PIKP33/ref=cm_sw_r_tw_ws_k3ZUwbAY49SXG ">欲しい物リスト »</a></p>
-        </div>
-        <div class="col-sm-6">
-          <h2>スポンサードリンク</h2>
-          <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-          <!-- 32ba.net Link(1) -->
-          <ins class="adsbygoogle"
-              style="display:block"
-              data-ad-client="ca-pub-3489945433339224"
-              data-ad-slot="3584620796"
-              data-ad-format="auto"></ins>
-          <script>
-          (adsbygoogle = window.adsbygoogle || []).push({});
-          </script>
-        </div>
-        <div class="col-sm-3">
-          <p><img class="circle" width="60px" height="60px" src="img/github.png"><h3>Github</h3></p>
-          <hr width="100%">
-          <p>私のGithubです.<br>ちなみに、このページのソースもGithubで管理しています.</p>
-          <p><a class="btn btn-default" role="button" href="https://github.com/32ba">Github »</a></p>
-        </div>
-      </div>
-    </div>
+    
     <div id="footer">
       <center>
       <div class="copy">
