連絡先の追加と相互リンクページの追加

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <p>Hello , World!<br></p>
       </div>
     </div>
-    <div class="container-fluid">
+    <div class="container">
       <div class="row">
         <div class="col-md-9">
           <div class="row">
@@ -78,18 +78,20 @@
               <p><a class="btn btn-default" role="button" href="profile.html">詳しいプロフィール »</a></p>
             </div>
             <div class="col-md-3">
-              <h2>リンク集<small>Links</small></h2>
+              <h2>リンク集 <small>Links</small></h2>
               <p>みつばがよく使うサービス一覧です。</br>Ask.fmとか、Twitterとかも入っています。</p>
               <p><a class="btn btn-default" role="button" href="links.html">リンク集 »</a></p>
             </div>
             <div class="col-md-3">
-              <h2>製作物<small>Products</small></h2>
+              <h2>製作物 <small>Products</small></h2>
               <p>みつばの製作物の一覧です。</br></p>
               <p><a class="btn btn-default" role="button" href="product.html">製作物 »</a></p>
             </div>
             <div class="col-md-3">
-              <h2>相互リンク<small>ReciprocalLink</small></h2>
-            </div>
+              <h2>相互リンク <small>ReciprocalLink</small></h2>
+              <p>私のページと相互リンクになっているページ集です．<br></p>
+              <p><a class="btn btn-default" role="button" href="reciprocallink.html">相互リンク »</a></p>
+            </div>  
             <div class="col-sm-12">
               <h4>スポンサードリンク</h4><br>
               <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
@@ -102,6 +104,10 @@
               <script>
               (adsbygoogle = window.adsbygoogle || []).push({});
               </script>
+            </div>
+            <div class="col-sm-12">
+              <h2>連絡先 <small>contact address</small></h2>
+              <h4>メール： <img src="img/mail.png"></h4>
             </div>
           </div>
         </div>
