--- a/reciprocallink.html
+++ b/reciprocallink.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>相互リンク集 - 32ba.net</title>
+    <title>相互リンク - 32ba.net</title>
     <!-- favicon -->
     <link rel="shortcut icon" href="ico/favicon.ico" type="image/vnd.microsoft.icon">
     <link rel="icon" href="ico/favicon.ico" type="image/vnd.microsoft.icon">
@@ -61,13 +61,19 @@
         </div>
       </div>
     </nav>
+    <!--見出し-->
     <div class="jumbotron" style="background: url('img/banner.png');background-position: center;background-position: center 60%;">
       <div class="container">
-        <h1>相互リンク集</h1>
+        <h1>相互リンク</h1>
         <p>私のサイトと相互リンクになっているページを紹介します．<br></p>
       </div>
     </div>
-    
+    <!--メインコンテンツ-->
+    <div class="container">
+      <midashi>相互リンクを希望の方は</midashi>
+      <h4>相互リンク希望の方は、<a href="">トップページ</a>に記載してあるメールアドレスまでご連絡下さい．<br>バナーはまだ無いです．</h4>
+    </div>
+    <!--フッター-->
     <div id="footer">
       <center>
       <div class="copy">
