連絡先にTwitterを追加

--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
             <div class="col-sm-12">
               <h2>連絡先 <small>contact address</small></h2>
               <h4>メール： <img src="img/mail.png"></h4>
+              <h4>twitter: <a href="///twitter.com/32ba__">@32ba__</a></h4>
             </div>
           </div>
         </div>
