細かな修正

--- a/404.html
+++ b/404.html
@@ -26,7 +26,7 @@
     <meta name="msapplication-TileColor" content="#2d88ef">
     <meta name="msapplication-TileImage" content="ico/mstile-144x144.png">
     <!-- BootstrapのCSS読み込み -->
-    <link rel="stylesheet" href="css/bootstrap.min.css">
+	https://github.com/32ba/32ba.github.io.git    <link rel="stylesheet" href="css/bootstrap.min.css">
     <!-- カスタムCSSの読み込み -->
     <link rel="stylesheet" href="css/bootstrap.mod.css">
     <!-- jQuery読み込み -->
