--- a/index.html
+++ b/index.html
@@ -79,12 +79,12 @@
             </div>
             <div class="col-md-3">
               <h2>リンク集 <small>Links</small></h2>
-              <p>みつばがよく使うサービス一覧です。</br>Ask.fmとか、Twitterとかも入っています。</p>
+              <p>みつばがよく使うサービス一覧です。<br>Ask.fmとか、Twitterとかも入っています。</p>
               <p><a class="btn btn-default" role="button" href="links.html">リンク集 »</a></p>
             </div>
             <div class="col-md-3">
               <h2>製作物 <small>Products</small></h2>
-              <p>みつばの製作物の一覧です。</br></p>
+              <p>みつばの製作物の一覧です。<br></p>
               <p><a class="btn btn-default" role="button" href="product.html">製作物 »</a></p>
             </div>
             <div class="col-md-3">
@@ -120,7 +120,6 @@
         </div>
       </div>
     </div>
-  </div>
   <div id="footer">
     <center>
     <div class="copy">
