--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         </div>
       </div>
     </nav>
-    <div class="jumbotron" style="background: url('img/banner.png');background-position: center;background-position: center 60%;">
+    <div class="jumbotron" style="background: url('img/banner.jpg');background-position: center;background-position: center 60%;">
       <div class="container">
         <h1>ようこそ,32ba.netへ!</h1>
         <p>Hello , World!<br></p>
